# STP

./: .clang-tidy  CMakeLists.txt  CMakePresets.json
src/libcsc/time/: time.hpp
test/libcsc/: CMakeLists.txt  time.cpp
